Migrate azure-search-documents 11.8.1 -> 12.0.2 (DD-43599)
v12 removes SearchDocument, uploadDocuments/mergeDocuments,
SearchResult.getDocument, VectorSearchOptions and the builder-attached
buffered sender. All call sites migrated per the verified API mapping in
docs/pipeline/DD-43599-azure-search-documents-12/03-design.md:

- New shared SearchFieldMapper (ChunkedEntry <-> Map) owning the
  KeyValuePair->Map conversion and Double->Float vector narrowing
- DocumentStorageService: IndexAction/IndexDocumentsBatch; merge carries
  only {id, customMetadata} so partial-update semantics are preserved
- AzureAISearchService: setVectorQueries/setKNearestNeighbors/setSearchText
- Migration tool: standalone SearchIndexingBufferedSenderBuilder with
  explicit actions; SyncUploader now stamps clientId via the shared mapper
  (fixes a latent omission in sync mode); IndexCopier count via
  SearchPagedResponse.getCount
- serviceVersion pinned to V2025_09_01 everywhere so the SDK rewrite and
  the service api-version bump are separately revertible
- A-TDD unit scaffolding pinning merge shape, upload payload types, filter
  strings, vector-dimension guard and mapper round-trip